[tool.poetry]
name = "infogain_travel"
version = "0.1.0"
description = "Infogain-travel using crewAI"
authors = ["Meer Saad Ali <meersaad.ali@infogain.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.85.0" }
crewai-tools = "^0.4.6"
pip = "^24.1.1"
install = "^1.3.5"

[tool.poetry.scripts]
infogain_travel = "infogain_travel.main:run"
train = "infogain_travel.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
